extension/skin/classic/mac/firebug.css
/* See license.txt for terms of usage */

#fbFirebugMenu > .toolbarbutton-text,
#fbFirebugMenu > .toolbarbutton-menu-dropmarker {
    display: none;
}

/************************************************************************************************/

#fbCommandToolbar {
    border-top: 1px solid #BBB9BA;
    border-bottom: 1px solid #BBB9BA;
    background: #F6F6F6 linear-gradient(to top, #FFFFFF, #E9E9E9 55%, #F2F2F2 55%, #FAFAFA) repeat-x;
}

#fbCommandArrow,
#fbCommandLine,
#fbCommandEditor,
#fbCommandLineCompletion,
#fbCommandLineMeasurer,
.fbCommandLineCompletions {
    font-family: Monaco, monospace;
}

/* Add some more padding to the completion popup */
.userTypedText {
    margin-left: 1px;
}

#fbCommandEditor {
    -moz-appearance: none;
    border: none;
    border-top: 1px solid;
    -moz-border-top-colors: #BBB9BA;
    padding: 2px;
}

#fbContentSplitter {
    border-color: #BBB9BA;
    background: #f3f3f3 !important;
}

#fbPanelSplitter {
    background: #f3f3f3 !important;
    border-left: none;
    border-right: none;
    min-width: 6px;
    max-width: 6px;
}

#fbPanelSplitter > #fbPanelSplitterBox {
    visibility: visible;
    height: 32px;
    width: 6px;
    background-color: -moz-dialog;
    background-image: -moz-linear-gradient(rgba(255,255,255,.9), rgba(255,255,255,.2));
    border-bottom: 1px solid #bebebe;
    cursor: default;
}

#fbPanelSplitter[orient="vertical"] {
    border-right: none;
    border-left: none;
    border-top: 1px solid #BBB9BA;
    min-height: 6px;
    max-height: 6px;
    min-width: 0;
    max-width: none;
}

#fbWindowButtons.innerToolbar {
    padding: 7px 0 7px 0;   /* Set proper height of window buttons (close, min, detach) */
}

/*************************************************************************************************/
/* Toolbars */

#fbToolbox {
    border-bottom: 1px solid #bebebe;
}

#fbToolbar {
    padding-left: 4px;
    border-bottom: none;
}

.innerToolbar {
    margin-right: 5px;   /* add some space between last button and first tab */
}

#fbPanelBar1-tabBox,
#fbPanelBar2-tabBox {
    height: 32px;
}

#fbPanelBar1-tabBox {
    background: linear-gradient(to bottom, #f1f1f1, #d2d2d2) no-repeat 0 0;
}

#fbPanelBar2-tabBox {
    -moz-appearance: none;
    background-color: transparent;
}

/* ensure the inner toolbar background looks the same as the other toolbars */
#fbToolbarInner.innerToolbar {
    margin-left: -5px;
    margin-right: 0;
    height: 31px;
    background-color: transparent;
}

#fbPanelBar1-innerToolbar {
    margin-right: 0;
}

/*************************************************************************************************/
/* Search Box */

#fbSearchBox {
    margin-bottom: 0px;
}

.fbsearch-textbox {
    border-radius: 10000px 0 0 10000px !important;
    margin-top: 1px;
}

.fbsearch-icon {
    width: 22px;
}

.fbsearch-icon,
.fbsearch-icon:hover {
    background-position: 5px 50%;
}

.fbsearch-options-label {
    color: black;
}

.fbsearch-options-buttons {
    -moz-appearance: none;
    border-radius: 10000px;
    border: 1px solid rgba(0,0,0,.35);
    background: linear-gradient(#f6f6f6, #e9e9e9);
    color: buttontext;
    margin: 0;
    margin-top: 1px;
}

.fbsearch-options-buttons {
    -moz-margin-start: 0;
    padding: 2px 6px;
}

.fbsearch-options-buttons > .toolbarbutton-text {
    margin: 0 !important;
    padding: 0;
    width: 0;
}

.fbsearch-options-buttons > .toolbarbutton-icon {
    margin: 0;
}

.fbsearch-options-buttons.prev {
    border-left: none;
    -moz-margin-end: 0;
    list-style-image: url(chrome://firebug/skin/searchPrevious.svg);
    border-radius: 0;
}

.fbsearch-options-buttons.next {
    -moz-padding-end: 7px;
    list-style-image: url(chrome://firebug/skin/searchNext.svg);
    border-radius: 0 10000px 10000px 0;
}

/*************************************************************************************************/

/* Don't display label and remove padding for all the following toolbar buttons */
#fbFirebugMenu,
#fbInspectButton,
#fbNavigateBackButton,
#fbNavigateForwardButton,
#fbCommandPopupButton {
    padding: 0 1px 0 1px;
}

#fbFirebugMenu > .toolbarbutton-text,
#fbInspectButton > .toolbarbutton-text,
#fbNavigateBackButton > .toolbarbutton-text,
#fbNavigateForwardButton > .toolbarbutton-text,
#fbCommandPopupButton > .toolbarbutton-text {
    display: none;
}

.toolbarbutton-iconic {
    margin: 1px 1px 0 1px !important;
    padding: 0 !important;
}

.toolbarbutton-iconic > .toolbarbutton-icon {
    padding: 0;
}

.toolbarbutton-iconic > .toolbarbutton-text {
    display: none;
}

#fbMinimizeButton,
#fbToggleCommandEditor {
    list-style-image: url(chrome://firebug/skin/mac/minimize.svg);
}

#fbDetachButton,
#fbToggleCommandLine {
    list-style-image: url(chrome://firebug/skin/mac/detach.svg);
}

#fbToggleCommandLine,
#fbToggleCommandEditor {
    margin-right: 20px !important;
}

#fbCloseButton {
    list-style-image: url(chrome://firebug/skin/mac/close.svg);
}

#fbCommandLineHistoryButton {
    list-style-image: url(chrome://firebug/skin/mac/commandHistory.svg);
}

#fbToggleCommandEditor {
    list-style-image: url(chrome://firebug/skin/mac/minimize.svg);
}

:-moz-any(#fbMinimizeButton,
          #fbToggleCommandEditor,
          #fbDetachButton,
          #fbToggleCommandLine,
          #fbCloseButton,
          #fbCommandLineHistoryButton,
          #fbToggleCommandEditor):hover {
    filter: url(resource://firebugui/filters.svg#darken);
}

:-moz-any(#fbMinimizeButton,
          #fbToggleCommandEditor,
          #fbDetachButton,
          #fbToggleCommandLine,
          #fbCloseButton,
          #fbCommandLineHistoryButton,
          #fbToggleCommandEditor):active {
    filter: url(resource://firebugui/filters.svg#deepDarken);
}

#fbCommandLineHistoryButton[disabled] {
    filter: url(resource://firebugui/filters.svg#brightenedGrayscale);
}
/* ... */

